--- a/languages/en.lang
+++ b/languages/en.lang
@@ -93,7 +93,11 @@ handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
 handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot \n______________ \n𖠌𝐏𝐀𝐁𝐋𝐎
-handlerEvents.commandNotFound=🕊️𝚌𝚎𝚝𝚝𝚎 𝚌𝚖𝚍 𝚗'𝚎𝚡𝚒𝚜𝚝𝚎 𝚙𝚊𝚜 𝚌𝚘𝚗𝚜𝚞𝚕𝚝𝚎 =help
+handlerEvents.commandNotFound= 🚫 𝐂𝐞𝐭𝐭𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐝 𝐧'𝐞𝐱𝐢𝐬𝐭𝐞 𝐩𝐚𝐬 𝐞𝐧𝐜𝐨𝐫𝐞 🚫
+____________________ 
+𝐏𝐀𝐓𝐄 ☞︎︎︎ +help 
+____________________ 
+⚠︎..𖤍𝐏𝐀𝐁𝐋𝐎𖤍..⚠︎
 handlerEvents.commandNotFound2=☞︎︎︎🂱𝚂𝙾𝚄𝚁𝙲𝙴 𝙳𝚄 𝙱𝙾𝚃🂱☜︎︎︎ \n━━━━━━━━━━ \n🥷𝙲𝚁𝙴𝙰𝚃𝙴𝚄𝚁 : ᏋᎷᎮᏋᏒᏋᏬᏒ ᏕᎤᎥᎴ  \n😇𝙻𝙸𝙴𝙽 𝙵𝙰𝙲𝙴𝙱𝙾𝙾𝙺😇 :https://www.facebook.com/profile.php?id=61550814914251 \n┉┉┉┉┉┉┉┉┉┉┉┉ 𖤍..ᏋᎷᎮᏋᏒᏋᏬᏒ ᏕᎤᎥᎴ..𖤍
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
 handlerEvents.onlyAdmin=❌ | Only group administrators can use the command "%1" \n______________ \n😇ᏕᎤᎥᎴ..𖤍 
