--- a/languages/en.lang
+++ b/languages/en.lang
@@ -92,7 +92,7 @@ handlerCheckData.cantCreateUser=Users with id '%1' cannot be written to the data
 handlerEvents.userBanned=You have been banned from using the bot\n» Reason: %1\n» Time: %2\n» User ID: %3
 handlerEvents.threadBanned=This group has been banned from using the bot\n» Reason: %1\n» Time: %2\n» Thread ID: %3
 handlerEvents.onlyAdminBox=This group is currently enabled only group administrators can use the bot
-handlerEvents.onlyAdminBot=❌ | Currently only bot's admin can use bot \n━━━━━━━━❪🥷❫━━━━━━━━\n🥷𝐏𝐀𝐁𝐋𝐎🥷
+handlerEvents.onlyAdminBot=❌ | 𝐀𝐜𝐭𝐮𝐞𝐥𝐥𝐞𝐦𝐞𝐧𝐭 𝐬𝐞𝐮𝐥 𝐦𝐨𝐧 𝐚𝐝𝐦𝐢𝐬 𝐩𝐞𝐮𝐭 𝐮𝐭𝐢𝐥𝐢𝐬𝐞𝐫 𝐥𝐞 𝐛𝐨𝐭 \n━━━━━━━━❪🥷❫━━━━━━━━\n🥷𝐏𝐀𝐁𝐋𝐎🥷
 handlerEvents.commandNotFound= 🚫 𝐂𝐞𝐭𝐭𝐞 𝐜𝐨𝐦𝐦𝐚𝐧𝐝 𝐧'𝐞𝐱𝐢𝐬𝐭𝐞 𝐩𝐚𝐬 🚫𝐓𝐀𝐏𝐄 ☞︎︎︎+help☜︎︎︎
 handlerEvents.commandNotFound2=➪➪𝐒𝐎𝐔𝐑𝐂𝐄 𝐃𝐔 𝐁𝐎𝐓 𖤍 \n𖤍━━━━━━━━━━━━━━━𖤍\n👑𝐂𝐑𝐄𝐀𝐓𝐄𝐔𝐑 :         ᏋᎷᎮᏋᏒᏋᏬᏒ ᏕᎤᎥᎴ          djafar Nacoulma Ḍark-Ṣano  \n❦︎𝐋𝐈𝐄𝐍 𝐅𝐀𝐂𝐄𝐁𝐎𝐎𝐊:  https://www.facebook.com/profile.php?id=61550814914251 \n𖤍━━━━━━━━━━━━━━━𖤍  👑..ᏋᎷᎮᏋᏒᏋᏬᏒ ᏕᎤᎥᎴ..👑
 handlerEvents.commandSyntaxError=The command you are using is wrong syntax, please type %1help %2 to see the details of how to use this command
@@ -102,7 +102,7 @@ handlerEvents.onlyAdminToUseOnReaction=🚫 | Only group administrators can use 
 handlerEvents.onlyAdminBot2=❌ | Only bot's admin can use the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReply=❌ | Only bot's admin can use the reply function of the command "%1"
 handlerEvents.onlyAdminBot2ToUseOnReaction=❌ | Only bot's admin can use the reaction function of the command "%1"
-handlerEvents.waitingForCommand=😕𝐂𝐚𝐥𝐦𝐞 𝐭𝐨𝐢 𝐪𝐮𝐞𝐥𝐪𝐮𝐞𝐬, 𝐬𝐞𝐜𝐨𝐧𝐝𝐬⏱️ 𝐬𝐚𝐢𝐬 𝐩𝐚𝐬 𝐥𝐚 𝐟𝐢𝐧 𝐝𝐮 𝐦𝐨𝐧𝐝𝐞..\n👑.ᏕᎤᎥᎴ.👑 %1𝐒
+handlerEvents.waitingForCommand=😕𝐂𝐚𝐥𝐦𝐞 𝐭𝐨𝐢, 𝐪𝐮𝐞𝐥𝐪𝐮𝐞𝐬 𝐬𝐞𝐜𝐨𝐧𝐝𝐬⏱️ 𝐬𝐚𝐢𝐬 𝐩𝐚𝐬 𝐥𝐚 𝐟𝐢𝐧 𝐝𝐮 𝐦𝐨𝐧𝐝𝐞..\n👑.ᏕᎤᎥᎴ.👑 %1𝐒
 handlerEvents.errorOccurred=❌ [ %1 ]\nAn error occurred at command "%2"\n\n%3
 handlerEvents.errorOccurred2=❌ [ %1 ]\nAn error occurred at command onChat in command "%2"\n\n%3
 handlerEvents.errorOccurred3=❌ [ %1 ]\nAn error occurred when executing onReply at command "%2"\n\n%3
